removes jekyll-feed gem - jekyll-feed was cause bundler to fail - misc changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "files.exclude": {
     "**/.sass-cache/": true,
     ".jekyll-cache/": true,
-    // "**/_site/": true,
+    "**/_site/": true,
     ".bundle": true,
     "node_modules/": true,
     "vendor/": true
