--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: 'Flightdeck: A Scaffold for Jekyll'
+# You can create any custom variable y would like, and they will be accessible
+#  the templates via {{ site.myvariable }}.
+tie: 'Flightdeck: A Scaffold for Jekyll'
 email: client-email@client_domain.com
 description: Flightdeck is a scaffold & starter project for Jekyll that uses an opinionated workflow.
 baseurl: '' # the subpath of your site, e.g. /blog
@@ -22,10 +22,10 @@ url: '' # the base hostname & protocol for your site, e.g. http://example.com
 ### SEO
 #image: /assets/images/open_graph_image.png
 social:
-  - twitter: flightdeck
-  - instagram: edheltzel
-  - github: edheltzel
-
+  twitter: github
+  instagram: github
+  github: github
+#rss:
 
 gaCode: # UA-XXXXXXXX-XX
 
