links docker volume against repository root

--- a/docker/instance.env
+++ b/docker/instance.env
@@ -2,5 +2,5 @@
 DOCKER_INSTANCE_NAME="flydeck-ubuntu.20.04"
 FLYDECK_PORT=4000
 #APP_DATA_DIR="$(PWD)/test/data/www"
-APP_DATA_DIR="$(PWD)/../web"
+APP_DATA_DIR="$(PWD)/../"
 APP_MOUNT_DIR="/var/www/flydeck"
