--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,27 @@
 {
+  "extends": "eslint:recommended",
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": ["error"],
+    "no-var": "warn",
+    "require-jsdoc": "off",
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "indent": ["error", 2],
+    "no-multi-spaces": ["error"]
+  },
   "env": {
     "browser": true,
-    "node": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
-  "extends": "eslint:recommended",
-  "rules": {
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+  "settings": {
+    "react": {
+      "version": "999.999.999" // resolves warning about React version
+    }
   },
   "parserOptions": {
+    "ecmaVersion": 12,
     "sourceType": "module"
   }
 }
