update readme to includes `pnpm` - fixes typos in gulp file - adds cspell words to workspace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,4 +74,13 @@
       "no_semicolon": true
     }
   },
+  "cSpell.ignoreWords": [
+    "liftoffrc",
+    "preinstall"
+  ],
+  "cSpell.words": [
+    "browsersync",
+    "gulpfile",
+    "mozjpeg"
+  ],
 }
