updates scss math functions with calc

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Flightdeck - Jekyll + Parcel",
+  "name": "flightdeck-for-jekyll-with-parcel",
   "version": "0.1.0",
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses Parcel.",
   "author": "Ed Heltzel <ed@rainyday.media>",
@@ -28,10 +28,10 @@
     "deploy": "./.liftoffrc ready go",
     "clean": "npm run clean:ruby & npm run clean:node",
     "clean:ruby": "rm -rf vendor/ .bundle/ Gemfile.lock",
-    "clean:node": "rm -rf node_modules yarn.lock package-lock.json",
+    "clean:node": "rm -rf node_modules yarn.lock package-lock.json pnpm-lock.yaml .cache/",
     "clean:site": "rm -rf _site/ .jekyll-cache && bundle exec jekyll clean",
     "clean:all": "npm run clean:ruby & npm run clean:node & npm run clean:site",
-    "purge": "npm run clean:all && npm install"
+    "purge": "npm run clean:all"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
