--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "files.exclude": {
     "**/.sass-cache/": true,
     "**/_site/": false,
-    ".bundle": true
+    ".bundle": false
   },
   "search.exclude": {
     "**/.sass-cache/": true,
@@ -12,7 +12,6 @@
     "*.lock": true,
     "node_modules/": true,
     ".bundle/": true,
-    "**/css/*": true,
   },
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#5c28fa",
