remove dist from vscode search results.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "**/.sass-cache/": true,
     "**/.publish/": true,
     "_site/**": true,
+    "dist/**": true,
     ".vscode/**": true,
     "*.lock": true,
     "node_modules/": true,
