--- a/.parcelrc
+++ b/.parcelrc
@@ -5,5 +5,6 @@
       "@parcel/optimizer-esbuild",
       "..."
     ]
-  }
+  },
+  "transformers": {"*.{ts, tsx}": ["@parcel/transformer-typescript-tsc"]}
 }
