--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
     "titleBar.inactiveForeground": "#cdec4c",
   },
   "cSpell.words": [
+    "divriots",
+    "jampack",
     "livereload"
   ],
 }
