--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
-    "start": "run-p dev:parcel dev:jekyll",
-    "dev:jekyll": "bundle exec jekyll server --livereload",
-    "dev:parcel": "run-p watch:assets",
-    "watch:assets": "parcel watch './assets/images/**/*.*' ./assets/js/app.js ./assets/styles/style.scss --dist-dir ./_site/assets",
-    "build": "run-s clean build:jekyll build:parcel",
+    "start": "run-p dev:*",
+    "dev:jekyll": "delay 0.3 && bundle exec jekyll serve --watch --trace",
+    "dev:parcel": "parcel watch ./_flightdeck/js/app.js ./_flightdeck/styles/style.scss --log-level verbose --dist-dir ./assets ",
+    "build": "run-s clean build:images build:parcel build:jekyll",
+    "build:images": "jampack ./assets/images",
     "build:jekyll": "bundle exec jekyll build JEKYLL_ENV=production",
-    "build:parcel": "parcel build './assets/images/**/*.*' ./assets/js/app.js ./assets/styles/style.scss --dist-dir ./_site/assets",
+    "build:parcel": "parcel build ./_flightdeck/js/app.js ./_flightdeck/styles/style.scss --dist-dir ./assets",
     "clean": "./.scrub.sh site",
     "purge": "./.scrub.sh purge"
   },
   "devDependencies": {
+    "@divriots/jampack": "^0.13.0",
     "@parcel/config-default": "^2.9.3",
     "@parcel/transformer-sass": "2.9.3",
     "browserlist": "^1.0.1",
+    "delay-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.9.3",
     "sass": "^1.63.6",
