--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^9.0.0",
     "gulp-terser": "^2.0.1",
-    "postcss": "^8.2.8"
+    "postcss": "^8.2.8",
+    "rome": "12.1.3"
   },
   "dependencies": {
     "eslint": "^8.13.0",
