--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "jekyll": "bundle exec gulp jekyll",
     "sass": "bundle exec gulp css",
     "js": "bundle exec gulp js",
+    "format": "rome format .",
+    "format:fix": "rome format --write",
     "build": "bundle exec gulp build --jekyllEnv='production'",
     "deploy:test": "./.liftoffrc ready",
     "deploy": "./.liftoffrc ready go",
@@ -22,11 +24,7 @@
     "clean:all": "pnpm run clean:ruby && pnpm run clean:site && pnpm run clean:node",
     "purge": "pnpm run clean:all && echo \"\\033[32m🧹 All Clean ✨\"\"\\033[0m Run \"\"\\033[33mpnpm install\"\"\\033[0m to start fresh 🤩\""
   },
-  "browserslist": [
-    "> 0.5%",
-    "last 2 versions",
-    "Firefox ESR"
-  ],
+  "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "browser-sync": "^2.26.3",
