--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
     "sass": "bundle exec gulp css",
     "js": "bundle exec gulp js",
     "format": "rome format .",
-    "format:fix": "rome format --write",
+    "format:fix": "rome format . --write",
+    "lint": "rome check .",
+    "lint:fix": "rome check . --apply",
     "build": "bundle exec gulp build --jekyllEnv='production'",
     "deploy:test": "./.liftoffrc ready",
     "deploy": "./.liftoffrc ready go",
-    "clean": "pnpm run clean:ruby && pnpm run clean:node",
-    "clean:ruby": "(rm -rf vendor/ .bundle/ Gemfile.lock || del vendor/ .bundle/ Gemfile.lock)",
-    "clean:site": "(rm -rf _site/ .jekyll-cache || del _site/ .jekyll-cache)",
-    "clean:node": "(rm -rf node_modules yarn.lock package-lock.json pnpm-lock.yaml || del node_modules yarn.lock package-lock.json pnpm-lock.yaml)",
-    "clean:all": "pnpm run clean:ruby && pnpm run clean:site && pnpm run clean:node",
-    "purge": "pnpm run clean:all && echo \"\\033[32m🧹 All Clean ✨\"\"\\033[0m Run \"\"\\033[33mpnpm install\"\"\\033[0m to start fresh 🤩\""
+    "clean": "./.scrub.sh site",
+    "purge": "./.scrub.sh purge"
   },
   "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
   "devDependencies": {
@@ -30,11 +28,9 @@
     "browser-sync": "^2.26.3",
     "cssnano": "^5.0.2",
     "del": "^6.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "fibers": "^5.0.0",
     "gulp": "^4.0.0",
     "gulp-dart-sass": "^1.0.2",
-    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.0",
@@ -42,9 +38,5 @@
     "gulp-terser": "^2.0.1",
     "postcss": "^8.2.8",
     "rome": "12.1.3"
-  },
-  "dependencies": {
-    "eslint": "^8.13.0",
-    "prettier": "^2.6.2"
   }
 }
