simplified npm scripts - removes gulp tasks as npm scripts - adds rome format and linting scripts. - lint ignore for rome

--- a/package.json
+++ b/package.json
@@ -4,39 +4,34 @@
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
   "author": "Ed Heltzel",
   "license": "MIT",
-  "homepage": "https://github.com/flight-deck/flightdeck-jekyll",
+  "homepage": "https://github.com/flight-deck/flightdeck-for-jekyll",
+  "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "browser-sync": "^2.29.3",
+    "cssnano": "^5.1.15",
+    "del": "^6.1.1",
+    "fibers": "^5.0.3",
+    "gulp": "^4.0.2",
+    "gulp-dart-sass": "^1.1.0",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-terser": "^2.1.0",
+    "postcss": "^8.4.28",
+    "rome": "12.1.3"
+  },
   "scripts": {
     "preinstall": "bundle install --path vendor/bundle",
     "start": "bundle exec gulp",
-    "imagemin": "bundle exec gulp images",
-    "jekyll": "bundle exec gulp jekyll",
-    "sass": "bundle exec gulp css",
-    "js": "bundle exec gulp js",
+    "build": "bundle exec gulp build --jekyllEnv='production'",
     "format": "rome format .",
     "format:fix": "rome format . --write",
     "lint": "rome check .",
     "lint:fix": "rome check . --apply",
-    "build": "bundle exec gulp build --jekyllEnv='production'",
-    "deploy:test": "./.liftoffrc ready",
-    "deploy": "./.liftoffrc ready go",
+    "lint:fix:suggested": "rome check . --apply-suggested",
     "clean": "./.scrub.sh site",
     "purge": "./.scrub.sh purge"
-  },
-  "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "browser-sync": "^2.26.3",
-    "cssnano": "^5.0.2",
-    "del": "^6.0.0",
-    "fibers": "^5.0.0",
-    "gulp": "^4.0.0",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^9.0.0",
-    "gulp-terser": "^2.0.1",
-    "postcss": "^8.2.8",
-    "rome": "12.1.3"
   }
 }
