--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "flightdeck",
-  "version": "1.0.92",
+  "version": "1.1.0",
   "description": "Flightdeck is an opinionated starter project for Jekyll that uses modern front-end tooling.",
   "author": "Ed Heltzel",
   "license": "MIT",
   "homepage": "https://github.com/flight-deck/flightdeck-for-jekyll",
-  "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR"
+  ],
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "browser-sync": "^2.29.3",
