--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "author": "Ed Heltzel",
   "license": "MIT",
   "homepage": "https://github.com/flight-deck/flightdeck-for-jekyll",
-  "browserslist": ["> 0.5%", "last 2 versions", "Firefox ESR"],
+  "browserslist": [
+    "> 0.5%",
+    "last 2 versions",
+    "Firefox ESR"
+  ],
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "browser-sync": "^2.29.3",
-    "cssnano": "^5.1.15",
-    "del": "^6.1.1",
+    "cssnano": "^6.0.1",
+    "del": "^7.1.0",
     "fibers": "^5.0.3",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-dart-sass": "^1.1.0",
-    "gulp-imagemin": "^7.1.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-terser": "^2.1.0",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.30",
     "rome": "12.1.3"
   },
   "scripts": {
